check_PROGRAMS = $(mlapack_gmp_test_PROGRAMS) 
TESTS = $(check_PROGRAMS)
mlapack_gmp_test_PROGRAMS = \
Mutils.debug.gmp_ref Mutils.debug.gmp\
Rlamch.debug.gmp_ref Rlamch.debug.gmp\
Rlae2.debug_gmp_ref  Rlae2.debug_gmp\
Rlaev2.debug_gmp_ref Rlaev2.debug_gmp\
Claev2.debug_gmp_ref Claev2.debug_gmp\
Rlassq.debug_gmp_ref Rlassq.debug_gmp\
Classq.debug_gmp_ref Classq.debug_gmp\
Rlanst.debug_gmp_ref Rlanst.debug_gmp\
Clanht.debug_gmp_ref Clanht.debug_gmp\
Rlansy.debug_gmp_ref Rlansy.debug_gmp\
Clansy.debug_gmp_ref Clansy.debug_gmp\
Clanhe.debug_gmp_ref Clanhe.debug_gmp\
Rlapy2.debug_gmp_ref Rlapy2.debug_gmp\
Rlarfg.debug_gmp_ref Rlarfg.debug_gmp\
Rlapy3.debug_gmp_ref Rlapy3.debug_gmp\
Rladiv.debug_gmp_ref Rladiv.debug_gmp\
Cladiv.debug_gmp_ref Cladiv.debug_gmp\
Clarfg.debug_gmp_ref Clarfg.debug_gmp\
Rlartg.debug_gmp_ref Rlartg.debug_gmp\
Clartg.debug_gmp_ref Clartg.debug_gmp\
Rlaset.debug_gmp_ref Rlaset.debug_gmp\
Claset.debug_gmp_ref Claset.debug_gmp\
Rlasr.debug_gmp_ref  Rlasr.debug_gmp\
Clasr.debug_gmp_ref  Clasr.debug_gmp\
Rpotf2.debug_gmp_ref Rpotf2.debug_gmp\
Clacgv.debug_gmp_ref Clacgv.debug_gmp\
Cpotf2.debug_gmp_ref Cpotf2.debug_gmp\
Rlascl.debug_gmp_ref Rlascl.debug_gmp\
Clascl.debug_gmp_ref Clascl.debug_gmp\
Rlasrt.debug_gmp_ref Rlasrt.debug_gmp\
Rsytd2.debug_gmp_ref Rsytd2.debug_gmp\
Chetd2.debug_gmp_ref Chetd2.debug_gmp\
Rsteqr.debug_gmp_ref Rsteqr.debug_gmp\
Csteqr.debug_gmp_ref Csteqr.debug_gmp\
Rsterf.debug_gmp_ref Rsterf.debug_gmp\
Rlarf.debug_gmp_ref  Rlarf.debug_gmp \
Clarf.debug_gmp_ref  Clarf.debug_gmp \
Rorg2l.debug_gmp_ref Rorg2l.debug_gmp\
Cung2l.debug_gmp_ref Cung2l.debug_gmp\
Rorg2r.debug_gmp_ref Rorg2r.debug_gmp\
Cung2r.debug_gmp_ref Cung2r.debug_gmp\
Rlarft.debug_gmp_ref Rlarft.debug_gmp\
Clarft.debug_gmp_ref Clarft.debug_gmp\
Rlarfb.debug_gmp_ref Rlarfb.debug_gmp\
Clarfb.debug_gmp_ref Clarfb.debug_gmp\
Rorgqr.debug_gmp_ref Rorgqr.debug_gmp\
Cungqr.debug_gmp_ref Cungqr.debug_gmp\
Rorgql.debug_gmp_ref Rorgql.debug_gmp\
Cungql.debug_gmp_ref Cungql.debug_gmp\
Rlatrd.debug_gmp_ref Rlatrd.debug_gmp\
Clatrd.debug_gmp_ref Clatrd.debug_gmp\
Rsytrd.debug_gmp_ref Rsytrd.debug_gmp\
Chetrd.debug_gmp_ref Chetrd.debug_gmp\
Rorgtr.debug_gmp_ref Rorgtr.debug_gmp\
Cungtr.debug_gmp_ref Cungtr.debug_gmp\
Rsyev.debug_gmp_ref  Rsyev.debug_gmp \
Cheev.debug_gmp_ref  Cheev.debug_gmp \
Rpotrf.debug_gmp_ref Rpotrf.debug_gmp\
Cpotrf.debug_gmp_ref Cpotrf.debug_gmp\
Clacrm.debug_gmp_ref Clacrm.debug_gmp\
Rtrti2.debug_gmp_ref Rtrti2.debug_gmp\
Ctrti2.debug_gmp_ref Ctrti2.debug_gmp\
Rtrtri.debug_gmp_ref Rtrtri.debug_gmp\
Ctrtri.debug_gmp_ref Ctrtri.debug_gmp\
Rgetf2.debug_gmp_ref Rgetf2.debug_gmp\
Cgetf2.debug_gmp_ref Cgetf2.debug_gmp\
Rlaswp.debug_gmp_ref Rlaswp.debug_gmp\
Claswp.debug_gmp_ref Claswp.debug_gmp\
Rgetrf.debug_gmp_ref Rgetrf.debug_gmp\
Cgetrf.debug_gmp_ref Cgetrf.debug_gmp\
Rgetri.debug_gmp_ref Rgetri.debug_gmp\
Cgetri.debug_gmp_ref Cgetri.debug_gmp\
Rgetrs.debug_gmp_ref Rgetrs.debug_gmp\
Cgetrs.debug_gmp_ref Cgetrs.debug_gmp\
Rgesv.debug_gmp_ref  Rgesv.debug_gmp \
Cgesv.debug_gmp_ref  Cgesv.debug_gmp \
Rtrtrs.debug_gmp_ref Rtrtrs.debug_gmp\
Ctrtrs.debug_gmp_ref Ctrtrs.debug_gmp\
Rlasyf.debug_gmp_ref Rlasyf.debug_gmp\
Clasyf.debug_gmp_ref Clasyf.debug_gmp\
Clahef.debug_gmp_ref Clahef.debug_gmp\
Clacrt.debug_gmp_ref Clacrt.debug_gmp\
Claesy.debug_gmp_ref Claesy.debug_gmp\
Crot.debug_gmp_ref   Crot.debug_gmp  \
Cspmv.debug_gmp_ref  Cspmv.debug_gmp \
Cspr.debug_gmp_ref   Cspr.debug_gmp  \
Csymv.debug_gmp_ref  Csymv.debug_gmp \
Csyr.debug_gmp_ref   Csyr.debug_gmp  \
iCmax1.debug_gmp_ref iCmax1.debug_gmp\
RCsum1.debug_gmp_ref RCsum1.debug_gmp\
Rpotrs.debug_gmp_ref Rpotrs.debug_gmp\
Rposv.debug_gmp_ref  Rposv.debug_gmp \
Rgeequ.debug_gmp_ref Rgeequ.debug_gmp\
Rlatrs.debug_gmp_ref Rlatrs.debug_gmp\
Rlange.debug_gmp_ref Rlange.debug_gmp\
Rgecon.debug_gmp_ref Rgecon.debug_gmp Rgecon.test_gmp_ref  Rgecon.test_gmp \
Rlauu2.debug_gmp_ref Rlauu2.debug_gmp\
Rlauum.debug_gmp_ref Rlauum.debug_gmp\
Rpotri.debug_gmp_ref Rpotri.debug_gmp\
Rpocon.debug_gmp_ref Rpocon.debug_gmp Rpocon.test_gmp_ref  Rpocon.test_gmp
 
#Rlacn2.debug_gmp_ref Rlacn2.debug_gmp

mlapack_gmp_testdir = $(prefix)/share/mpack/debug/gmp
ref_libdepends = -L$(top_builddir)/mlapack/reference -lmlapack_gmp_ref -lmlapack_mpfr_ref -L$(top_builddir)/mblas/reference -lmblas_gmp_ref -lmblas_mpfr_ref
opt_libdepends = -L$(top_builddir)/mlapack/optimized/gmp -lmlapack_gmp -L$(top_builddir)/mlapack/reference -lmlapack_mpfr_ref -L$(top_builddir)/mblas/optimized/gmp -lmblas_gmp -L$(top_builddir)/mblas/reference -lmblas_mpfr_ref
mplibs=-L$(MPC_LIBDIR) -L$(MPFR_LIBDIR) -L$(GMP_LIBDIR) -L$(top_builddir)/mpfrc++ -lmpfrcxx -lmpc -lmpfr -lgmpxx -lgmp 
refblas=-L$(top_builddir)/external/i/LAPACK/lib -lblas $(FCLIBS)
reflapack=-L$(top_builddir)/external/i/LAPACK/lib -llapack $(FCLIBS)

debug_cxxflags = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(GMP_INCLUDEDIR) -I$(MPFR_INCLUDEDIR) -I$(MPC_INCLUDEDIR) -I$(top_srcdir)/mpfrc++ -D___MPACK_BUILD_WITH_GMP___
debug_libdepends = $(mplibs) $(reflapack) $(refblas)
AM_FFLAGS = -x f77-cpp-input -g

if !IS_MACOSX
debug_srcdepends = ../../../mblas/debug/common/xerbla.cpp ../../../mblas/debug/common/mpack.debug.cpp ../../../mblas/debug/common/Mxerbla.override.cpp
endif

if IS_MACOSX
lib_LTLIBRARIES = libmxerbla_override.la
libmxerbla_override_la_CPPFLAGS = -I$(top_srcdir)/include -D___MPACK_BUILD_WITH_GMP___
libmxerbla_override_la_SOURCES =  ../../../mblas/debug/common/Mxerbla.override.cpp
libmxerbla_override_la_LDFLAGS= -Wl,-flat_namespace,-undefined,dynamic_lookup
debug_srcdepends = ../../../mblas/debug/common/xerbla.cpp ../../../mblas/debug/common/mpack.debug.cpp
mplibs+=-Wl,-flat_namespace,-undefined,dynamic_lookup
TESTS_ENVIRONMENT=DYLD_INSERT_LIBRARIES=.libs/libmxerbla_override.0.dylib
endif

Mutils_debug_gmp_SOURCES  = ../common/Mutils.debug.cpp $(debug_srcdepends) ../common/ilaenv.cpp
Mutils_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Mutils_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Mutils_debug_gmp_ref_SOURCES  = ../common/Mutils.debug.cpp $(debug_srcdepends)
Mutils_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Mutils_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlamch_debug_gmp_SOURCES  = ../common/Rlamch.debug.cpp $(debug_srcdepends)
Rlamch_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlamch_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlamch_debug_gmp_ref_SOURCES  = ../common/Rlamch.debug.cpp $(debug_srcdepends)
Rlamch_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlamch_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlae2_debug_gmp_SOURCES  = ../common/Rlae2.debug.cpp $(debug_srcdepends)
Rlae2_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlae2_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlae2_debug_gmp_ref_SOURCES  = ../common/Rlae2.debug.cpp $(debug_srcdepends)
Rlae2_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlae2_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlaev2_debug_gmp_SOURCES  = ../common/Rlaev2.debug.cpp $(debug_srcdepends)
Rlaev2_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlaev2_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlaev2_debug_gmp_ref_SOURCES  = ../common/Rlaev2.debug.cpp $(debug_srcdepends)
Rlaev2_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlaev2_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Claev2_debug_gmp_SOURCES  = ../common/Claev2.debug.cpp $(debug_srcdepends)
Claev2_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Claev2_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Claev2_debug_gmp_ref_SOURCES  = ../common/Claev2.debug.cpp $(debug_srcdepends)
Claev2_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Claev2_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlassq_debug_gmp_SOURCES  = ../common/Rlassq.debug.cpp $(debug_srcdepends)
Rlassq_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlassq_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlassq_debug_gmp_ref_SOURCES  = ../common/Rlassq.debug.cpp $(debug_srcdepends)
Rlassq_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlassq_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Classq_debug_gmp_SOURCES  = ../common/Classq.debug.cpp $(debug_srcdepends)
Classq_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Classq_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Classq_debug_gmp_ref_SOURCES  = ../common/Classq.debug.cpp $(debug_srcdepends)
Classq_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Classq_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlanst_debug_gmp_SOURCES  = ../common/Rlanst.debug.cpp $(debug_srcdepends)
Rlanst_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlanst_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlanst_debug_gmp_ref_SOURCES  = ../common/Rlanst.debug.cpp $(debug_srcdepends)
Rlanst_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlanst_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Clanht_debug_gmp_SOURCES  = ../common/Clanht.debug.cpp $(debug_srcdepends)
Clanht_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clanht_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clanht_debug_gmp_ref_SOURCES  = ../common/Clanht.debug.cpp $(debug_srcdepends)
Clanht_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clanht_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlansy_debug_gmp_SOURCES  = ../common/Rlansy.debug.cpp $(debug_srcdepends)
Rlansy_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlansy_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlansy_debug_gmp_ref_SOURCES  = ../common/Rlansy.debug.cpp $(debug_srcdepends)
Rlansy_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlansy_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Clansy_debug_gmp_SOURCES  = ../common/Clansy.debug.cpp $(debug_srcdepends)
Clansy_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clansy_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clansy_debug_gmp_ref_SOURCES  = ../common/Clansy.debug.cpp $(debug_srcdepends)
Clansy_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clansy_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Clanhe_debug_gmp_SOURCES  = ../common/Clanhe.debug.cpp $(debug_srcdepends)
Clanhe_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clanhe_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clanhe_debug_gmp_ref_SOURCES  = ../common/Clanhe.debug.cpp $(debug_srcdepends)
Clanhe_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clanhe_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlapy2_debug_gmp_SOURCES  = ../common/Rlapy2.debug.cpp $(debug_srcdepends)
Rlapy2_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlapy2_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlarfg_debug_gmp_SOURCES  = ../common/Rlarfg.debug.cpp $(debug_srcdepends)
Rlarfg_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlarfg_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlarfg_debug_gmp_ref_SOURCES  = ../common/Rlarfg.debug.cpp $(debug_srcdepends)
Rlarfg_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlarfg_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlapy2_debug_gmp_ref_SOURCES  = ../common/Rlapy2.debug.cpp $(debug_srcdepends)
Rlapy2_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlapy2_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlapy3_debug_gmp_SOURCES  = ../common/Rlapy3.debug.cpp $(debug_srcdepends)
Rlapy3_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlapy3_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlapy3_debug_gmp_ref_SOURCES  = ../common/Rlapy3.debug.cpp $(debug_srcdepends)
Rlapy3_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlapy3_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rladiv_debug_gmp_SOURCES  = ../common/Rladiv.debug.cpp $(debug_srcdepends)
Rladiv_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rladiv_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rladiv_debug_gmp_ref_SOURCES  = ../common/Rladiv.debug.cpp $(debug_srcdepends)
Rladiv_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rladiv_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Cladiv_debug_gmp_SOURCES  = ../common/Cladiv.debug.cpp $(debug_srcdepends)
Cladiv_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cladiv_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cladiv_debug_gmp_ref_SOURCES  = ../common/Cladiv.debug.cpp $(debug_srcdepends)
Cladiv_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cladiv_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Clarfg_debug_gmp_SOURCES  = ../common/Clarfg.debug.cpp $(debug_srcdepends)
Clarfg_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clarfg_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clarfg_debug_gmp_ref_SOURCES  = ../common/Clarfg.debug.cpp $(debug_srcdepends)
Clarfg_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clarfg_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlartg_debug_gmp_SOURCES  = ../common/Rlartg.debug.cpp $(debug_srcdepends)
Rlartg_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlartg_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlartg_debug_gmp_ref_SOURCES  = ../common/Rlartg.debug.cpp $(debug_srcdepends)
Rlartg_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlartg_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Clartg_debug_gmp_SOURCES  = ../common/Clartg.debug.cpp $(debug_srcdepends)
Clartg_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clartg_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clartg_debug_gmp_ref_SOURCES  = ../common/Clartg.debug.cpp $(debug_srcdepends)
Clartg_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clartg_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlaset_debug_gmp_SOURCES  = ../common/Rlaset.debug.cpp $(debug_srcdepends)
Rlaset_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlaset_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlaset_debug_gmp_ref_SOURCES  = ../common/Rlaset.debug.cpp $(debug_srcdepends)
Rlaset_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlaset_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Claset_debug_gmp_SOURCES  = ../common/Claset.debug.cpp $(debug_srcdepends)
Claset_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Claset_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Claset_debug_gmp_ref_SOURCES  = ../common/Claset.debug.cpp $(debug_srcdepends)
Claset_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Claset_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlasr_debug_gmp_SOURCES  = ../common/Rlasr.debug.cpp $(debug_srcdepends)
Rlasr_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlasr_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlasr_debug_gmp_ref_SOURCES  = ../common/Rlasr.debug.cpp $(debug_srcdepends)
Rlasr_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlasr_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Clasr_debug_gmp_SOURCES  = ../common/Clasr.debug.cpp $(debug_srcdepends)
Clasr_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clasr_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clasr_debug_gmp_ref_SOURCES  = ../common/Clasr.debug.cpp $(debug_srcdepends)
Clasr_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clasr_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rpotf2_debug_gmp_SOURCES  = ../common/Rpotf2.debug.cpp $(debug_srcdepends)
Rpotf2_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rpotf2_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rpotf2_debug_gmp_ref_SOURCES  = ../common/Rpotf2.debug.cpp $(debug_srcdepends)
Rpotf2_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rpotf2_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Clacgv_debug_gmp_SOURCES  = ../common/Clacgv.debug.cpp $(debug_srcdepends)
Clacgv_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clacgv_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clacgv_debug_gmp_ref_SOURCES  = ../common/Clacgv.debug.cpp $(debug_srcdepends)
Clacgv_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clacgv_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Cpotf2_debug_gmp_SOURCES  = ../common/Cpotf2.debug.cpp $(debug_srcdepends)
Cpotf2_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cpotf2_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cpotf2_debug_gmp_ref_SOURCES  = ../common/Cpotf2.debug.cpp $(debug_srcdepends)
Cpotf2_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cpotf2_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlascl_debug_gmp_SOURCES  = ../common/Rlascl.debug.cpp $(debug_srcdepends)
Rlascl_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlascl_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlascl_debug_gmp_ref_SOURCES  = ../common/Rlascl.debug.cpp $(debug_srcdepends)
Rlascl_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlascl_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Clascl_debug_gmp_SOURCES  = ../common/Clascl.debug.cpp $(debug_srcdepends)
Clascl_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clascl_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clascl_debug_gmp_ref_SOURCES  = ../common/Clascl.debug.cpp $(debug_srcdepends)
Clascl_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clascl_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlasrt_debug_gmp_SOURCES  = ../common/Rlasrt.debug.cpp $(debug_srcdepends)
Rlasrt_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlasrt_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlasrt_debug_gmp_ref_SOURCES  = ../common/Rlasrt.debug.cpp $(debug_srcdepends)
Rlasrt_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlasrt_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rsytd2_debug_gmp_SOURCES  = ../common/Rsytd2.debug.cpp $(debug_srcdepends)
Rsytd2_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rsytd2_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rsytd2_debug_gmp_ref_SOURCES  = ../common/Rsytd2.debug.cpp $(debug_srcdepends)
Rsytd2_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rsytd2_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Chetd2_debug_gmp_SOURCES  = ../common/Chetd2.debug.cpp $(debug_srcdepends)
Chetd2_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Chetd2_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Chetd2_debug_gmp_ref_SOURCES  = ../common/Chetd2.debug.cpp $(debug_srcdepends)
Chetd2_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Chetd2_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rsteqr_debug_gmp_ref_SOURCES  = ../common/Rsteqr.debug.cpp $(debug_srcdepends)
Rsteqr_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rsteqr_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rsteqr_debug_gmp_SOURCES  = ../common/Rsteqr.debug.cpp $(debug_srcdepends)
Rsteqr_debug_gmp_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rsteqr_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Csteqr_debug_gmp_SOURCES  = ../common/Csteqr.debug.cpp $(debug_srcdepends)
Csteqr_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Csteqr_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Csteqr_debug_gmp_ref_SOURCES  = ../common/Csteqr.debug.cpp $(debug_srcdepends)
Csteqr_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Csteqr_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rsterf_debug_gmp_SOURCES  = ../common/Rsterf.debug.cpp $(debug_srcdepends)
Rsterf_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rsterf_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rsterf_debug_gmp_ref_SOURCES  = ../common/Rsterf.debug.cpp $(debug_srcdepends)
Rsterf_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rsterf_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Rlarf_debug_gmp_SOURCES  = ../common/Rlarf.debug.cpp $(debug_srcdepends)
Rlarf_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlarf_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlarf_debug_gmp_ref_SOURCES  = ../common/Rlarf.debug.cpp $(debug_srcdepends)
Rlarf_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlarf_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)  

Clarf_debug_gmp_SOURCES  = ../common/Clarf.debug.cpp $(debug_srcdepends)
Clarf_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clarf_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clarf_debug_gmp_ref_SOURCES  = ../common/Clarf.debug.cpp $(debug_srcdepends)
Clarf_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clarf_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rorg2l_debug_gmp_SOURCES  = ../common/Rorg2l.debug.cpp $(debug_srcdepends)
Rorg2l_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rorg2l_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rorg2l_debug_gmp_ref_SOURCES  = ../common/Rorg2l.debug.cpp $(debug_srcdepends)
Rorg2l_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rorg2l_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Cung2l_debug_gmp_SOURCES  = ../common/Cung2l.debug.cpp $(debug_srcdepends)
Cung2l_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cung2l_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cung2l_debug_gmp_ref_SOURCES  = ../common/Cung2l.debug.cpp $(debug_srcdepends)
Cung2l_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cung2l_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rorg2r_debug_gmp_SOURCES  = ../common/Rorg2r.debug.cpp $(debug_srcdepends)
Rorg2r_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rorg2r_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rorg2r_debug_gmp_ref_SOURCES  = ../common/Rorg2r.debug.cpp $(debug_srcdepends)
Rorg2r_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rorg2r_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Cung2r_debug_gmp_SOURCES  = ../common/Cung2r.debug.cpp $(debug_srcdepends)
Cung2r_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cung2r_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cung2r_debug_gmp_ref_SOURCES  = ../common/Cung2r.debug.cpp $(debug_srcdepends)
Cung2r_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cung2r_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rlarft_debug_gmp_SOURCES  = ../common/Rlarft.debug.cpp $(debug_srcdepends)
Rlarft_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlarft_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlarft_debug_gmp_ref_SOURCES  = ../common/Rlarft.debug.cpp $(debug_srcdepends)
Rlarft_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlarft_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Clarft_debug_gmp_SOURCES  = ../common/Clarft.debug.cpp $(debug_srcdepends)
Clarft_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clarft_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clarft_debug_gmp_ref_SOURCES  = ../common/Clarft.debug.cpp $(debug_srcdepends)
Clarft_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clarft_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rlarfb_debug_gmp_SOURCES  = ../common/Rlarfb.debug.cpp $(debug_srcdepends)
Rlarfb_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlarfb_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlarfb_debug_gmp_ref_SOURCES  = ../common/Rlarfb.debug.cpp $(debug_srcdepends)
Rlarfb_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlarfb_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Clarfb_debug_gmp_SOURCES  = ../common/Clarfb.debug.cpp $(debug_srcdepends)
Clarfb_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clarfb_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clarfb_debug_gmp_ref_SOURCES  = ../common/Clarfb.debug.cpp $(debug_srcdepends)
Clarfb_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clarfb_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rorgqr_debug_gmp_SOURCES  = ../common/Rorgqr.debug.cpp $(debug_srcdepends)
Rorgqr_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rorgqr_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rorgqr_debug_gmp_ref_SOURCES  = ../common/Rorgqr.debug.cpp $(debug_srcdepends)
Rorgqr_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rorgqr_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Cungqr_debug_gmp_SOURCES  = ../common/Cungqr.debug.cpp $(debug_srcdepends)
Cungqr_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cungqr_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cungqr_debug_gmp_ref_SOURCES  = ../common/Cungqr.debug.cpp $(debug_srcdepends)
Cungqr_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cungqr_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rorgql_debug_gmp_SOURCES  = ../common/Rorgql.debug.cpp $(debug_srcdepends)
Rorgql_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rorgql_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rorgql_debug_gmp_ref_SOURCES  = ../common/Rorgql.debug.cpp $(debug_srcdepends)
Rorgql_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rorgql_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Cungql_debug_gmp_SOURCES  = ../common/Cungql.debug.cpp $(debug_srcdepends)
Cungql_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cungql_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cungql_debug_gmp_ref_SOURCES  = ../common/Cungql.debug.cpp $(debug_srcdepends)
Cungql_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cungql_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rlatrd_debug_gmp_SOURCES  = ../common/Rlatrd.debug.cpp $(debug_srcdepends)
Rlatrd_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlatrd_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlatrd_debug_gmp_ref_SOURCES  = ../common/Rlatrd.debug.cpp $(debug_srcdepends)
Rlatrd_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlatrd_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Clatrd_debug_gmp_SOURCES  = ../common/Clatrd.debug.cpp $(debug_srcdepends)
Clatrd_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clatrd_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clatrd_debug_gmp_ref_SOURCES  = ../common/Clatrd.debug.cpp $(debug_srcdepends)
Clatrd_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clatrd_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rsytrd_debug_gmp_SOURCES  = ../common/Rsytrd.debug.cpp $(debug_srcdepends)
Rsytrd_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rsytrd_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rsytrd_debug_gmp_ref_SOURCES  = ../common/Rsytrd.debug.cpp $(debug_srcdepends)
Rsytrd_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rsytrd_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Chetrd_debug_gmp_SOURCES  = ../common/Chetrd.debug.cpp $(debug_srcdepends)
Chetrd_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Chetrd_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Chetrd_debug_gmp_ref_SOURCES  = ../common/Chetrd.debug.cpp $(debug_srcdepends)
Chetrd_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Chetrd_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rorgtr_debug_gmp_SOURCES  = ../common/Rorgtr.debug.cpp $(debug_srcdepends)
Rorgtr_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rorgtr_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rorgtr_debug_gmp_ref_SOURCES  = ../common/Rorgtr.debug.cpp $(debug_srcdepends)
Rorgtr_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rorgtr_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Cungtr_debug_gmp_SOURCES  = ../common/Cungtr.debug.cpp $(debug_srcdepends)
Cungtr_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cungtr_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cungtr_debug_gmp_ref_SOURCES  = ../common/Cungtr.debug.cpp $(debug_srcdepends)
Cungtr_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cungtr_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rsyev_debug_gmp_SOURCES  = ../common/Rsyev.debug.cpp $(debug_srcdepends)
Rsyev_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rsyev_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rsyev_debug_gmp_ref_SOURCES  = ../common/Rsyev.debug.cpp $(debug_srcdepends)
Rsyev_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rsyev_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Cheev_debug_gmp_SOURCES  = ../common/Cheev.debug.cpp $(debug_srcdepends)
Cheev_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cheev_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cheev_debug_gmp_ref_SOURCES  = ../common/Cheev.debug.cpp $(debug_srcdepends)
Cheev_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cheev_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rpotrf_debug_gmp_SOURCES  = ../common/Rpotrf.debug.cpp $(debug_srcdepends)
Rpotrf_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rpotrf_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rpotrf_debug_gmp_ref_SOURCES  = ../common/Rpotrf.debug.cpp $(debug_srcdepends)
Rpotrf_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rpotrf_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Cpotrf_debug_gmp_SOURCES  = ../common/Cpotrf.debug.cpp $(debug_srcdepends)
Cpotrf_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cpotrf_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cpotrf_debug_gmp_ref_SOURCES  = ../common/Cpotrf.debug.cpp $(debug_srcdepends)
Cpotrf_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cpotrf_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Clacrm_debug_gmp_SOURCES  = ../common/Clacrm.debug.cpp $(debug_srcdepends)
Clacrm_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clacrm_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clacrm_debug_gmp_ref_SOURCES  = ../common/Clacrm.debug.cpp $(debug_srcdepends)
Clacrm_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clacrm_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rtrti2_debug_gmp_SOURCES  = ../common/Rtrti2.debug.cpp $(debug_srcdepends)
Rtrti2_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rtrti2_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rtrti2_debug_gmp_ref_SOURCES  = ../common/Rtrti2.debug.cpp $(debug_srcdepends)
Rtrti2_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rtrti2_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Ctrti2_debug_gmp_SOURCES  = ../common/Ctrti2.debug.cpp $(debug_srcdepends)
Ctrti2_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Ctrti2_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Ctrti2_debug_gmp_ref_SOURCES  = ../common/Ctrti2.debug.cpp $(debug_srcdepends)
Ctrti2_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Ctrti2_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rtrtri_debug_gmp_SOURCES  = ../common/Rtrtri.debug.cpp $(debug_srcdepends)
Rtrtri_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rtrtri_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rtrtri_debug_gmp_ref_SOURCES  = ../common/Rtrtri.debug.cpp $(debug_srcdepends)
Rtrtri_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rtrtri_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Ctrtri_debug_gmp_SOURCES  = ../common/Ctrtri.debug.cpp $(debug_srcdepends)
Ctrtri_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Ctrtri_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Ctrtri_debug_gmp_ref_SOURCES  = ../common/Ctrtri.debug.cpp $(debug_srcdepends)
Ctrtri_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Ctrtri_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rgetf2_debug_gmp_SOURCES  = ../common/Rgetf2.debug.cpp $(debug_srcdepends)
Rgetf2_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgetf2_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rgetf2_debug_gmp_ref_SOURCES  = ../common/Rgetf2.debug.cpp $(debug_srcdepends)
Rgetf2_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgetf2_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Cgetf2_debug_gmp_SOURCES  = ../common/Cgetf2.debug.cpp $(debug_srcdepends)
Cgetf2_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cgetf2_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cgetf2_debug_gmp_ref_SOURCES  = ../common/Cgetf2.debug.cpp $(debug_srcdepends)
Cgetf2_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cgetf2_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rlaswp_debug_gmp_SOURCES  = ../common/Rlaswp.debug.cpp $(debug_srcdepends)
Rlaswp_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlaswp_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlaswp_debug_gmp_ref_SOURCES  = ../common/Rlaswp.debug.cpp $(debug_srcdepends)
Rlaswp_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlaswp_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Claswp_debug_gmp_SOURCES  = ../common/Claswp.debug.cpp $(debug_srcdepends)
Claswp_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Claswp_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Claswp_debug_gmp_ref_SOURCES  = ../common/Claswp.debug.cpp $(debug_srcdepends)
Claswp_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Claswp_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rgetrf_debug_gmp_SOURCES  = ../common/Rgetrf.debug.cpp $(debug_srcdepends)
Rgetrf_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgetrf_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rgetrf_debug_gmp_ref_SOURCES  = ../common/Rgetrf.debug.cpp $(debug_srcdepends)
Rgetrf_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgetrf_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Cgetrf_debug_gmp_SOURCES  = ../common/Cgetrf.debug.cpp $(debug_srcdepends)
Cgetrf_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cgetrf_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cgetrf_debug_gmp_ref_SOURCES  = ../common/Cgetrf.debug.cpp $(debug_srcdepends)
Cgetrf_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cgetrf_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rgetri_debug_gmp_ref_SOURCES  = ../common/Rgetri.debug.cpp $(debug_srcdepends)
Rgetri_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgetri_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rgetri_debug_gmp_SOURCES  = ../common/Rgetri.debug.cpp $(debug_srcdepends)
Rgetri_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgetri_debug_gmp_CXXFLAGS = $(debug_cxxflags)

Cgetri_debug_gmp_SOURCES  = ../common/Cgetri.debug.cpp $(debug_srcdepends)
Cgetri_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cgetri_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cgetri_debug_gmp_ref_SOURCES  = ../common/Cgetri.debug.cpp $(debug_srcdepends)
Cgetri_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cgetri_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rgetrs_debug_gmp_ref_SOURCES  = ../common/Rgetrs.debug.cpp $(debug_srcdepends)
Rgetrs_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgetrs_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rgetrs_debug_gmp_SOURCES  = ../common/Rgetrs.debug.cpp $(debug_srcdepends)
Rgetrs_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgetrs_debug_gmp_CXXFLAGS = $(debug_cxxflags)

Cgetrs_debug_gmp_SOURCES  = ../common/Cgetrs.debug.cpp $(debug_srcdepends)
Cgetrs_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cgetrs_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cgetrs_debug_gmp_ref_SOURCES  = ../common/Cgetrs.debug.cpp $(debug_srcdepends)
Cgetrs_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cgetrs_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rgesv_debug_gmp_ref_SOURCES  = ../common/Rgesv.debug.cpp $(debug_srcdepends)
Rgesv_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgesv_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rgesv_debug_gmp_SOURCES  = ../common/Rgesv.debug.cpp $(debug_srcdepends)
Rgesv_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgesv_debug_gmp_CXXFLAGS = $(debug_cxxflags)

Cgesv_debug_gmp_SOURCES  = ../common/Cgesv.debug.cpp $(debug_srcdepends)
Cgesv_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cgesv_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cgesv_debug_gmp_ref_SOURCES  = ../common/Cgesv.debug.cpp $(debug_srcdepends)
Cgesv_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cgesv_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rtrtrs_debug_gmp_ref_SOURCES  = ../common/Rtrtrs.debug.cpp $(debug_srcdepends)
Rtrtrs_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rtrtrs_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rtrtrs_debug_gmp_SOURCES  = ../common/Rtrtrs.debug.cpp $(debug_srcdepends)
Rtrtrs_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rtrtrs_debug_gmp_CXXFLAGS = $(debug_cxxflags)

Ctrtrs_debug_gmp_SOURCES  = ../common/Ctrtrs.debug.cpp $(debug_srcdepends)
Ctrtrs_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Ctrtrs_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Ctrtrs_debug_gmp_ref_SOURCES  = ../common/Ctrtrs.debug.cpp $(debug_srcdepends)
Ctrtrs_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Ctrtrs_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rlasyf_debug_gmp_ref_SOURCES  = ../common/Rlasyf.debug.cpp $(debug_srcdepends)
Rlasyf_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlasyf_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rlasyf_debug_gmp_SOURCES  = ../common/Rlasyf.debug.cpp $(debug_srcdepends)
Rlasyf_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlasyf_debug_gmp_CXXFLAGS = $(debug_cxxflags)

Clasyf_debug_gmp_SOURCES  = ../common/Clasyf.debug.cpp $(debug_srcdepends)
Clasyf_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clasyf_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clasyf_debug_gmp_ref_SOURCES  = ../common/Clasyf.debug.cpp $(debug_srcdepends)
Clasyf_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clasyf_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Clahef_debug_gmp_SOURCES  = ../common/Clahef.debug.cpp $(debug_srcdepends)
Clahef_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clahef_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clahef_debug_gmp_ref_SOURCES  = ../common/Clahef.debug.cpp $(debug_srcdepends)
Clahef_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clahef_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Clacrt_debug_gmp_SOURCES  = ../common/Clacrt.debug.cpp $(debug_srcdepends)
Clacrt_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Clacrt_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Clacrt_debug_gmp_ref_SOURCES  = ../common/Clacrt.debug.cpp $(debug_srcdepends)
Clacrt_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Clacrt_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Claesy_debug_gmp_SOURCES  = ../common/Claesy.debug.cpp $(debug_srcdepends)
Claesy_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Claesy_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Claesy_debug_gmp_ref_SOURCES  = ../common/Claesy.debug.cpp $(debug_srcdepends)
Claesy_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Claesy_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Crot_debug_gmp_SOURCES  = ../common/Crot.debug.cpp $(debug_srcdepends)
Crot_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Crot_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Crot_debug_gmp_ref_SOURCES  = ../common/Crot.debug.cpp $(debug_srcdepends)
Crot_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Crot_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Cspmv_debug_gmp_SOURCES  = ../common/Cspmv.debug.cpp $(debug_srcdepends)
Cspmv_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cspmv_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cspmv_debug_gmp_ref_SOURCES  = ../common/Cspmv.debug.cpp $(debug_srcdepends)
Cspmv_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cspmv_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Cspr_debug_gmp_SOURCES  = ../common/Cspr.debug.cpp $(debug_srcdepends)
Cspr_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Cspr_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Cspr_debug_gmp_ref_SOURCES  = ../common/Cspr.debug.cpp $(debug_srcdepends)
Cspr_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Cspr_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Csymv_debug_gmp_SOURCES  = ../common/Csymv.debug.cpp $(debug_srcdepends)
Csymv_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Csymv_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Csymv_debug_gmp_ref_SOURCES  = ../common/Csymv.debug.cpp $(debug_srcdepends)
Csymv_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Csymv_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Csyr_debug_gmp_SOURCES  = ../common/Csyr.debug.cpp $(debug_srcdepends)
Csyr_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Csyr_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Csyr_debug_gmp_ref_SOURCES  = ../common/Csyr.debug.cpp $(debug_srcdepends)
Csyr_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Csyr_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

iCmax1_debug_gmp_SOURCES  = ../common/iCmax1.debug.cpp $(debug_srcdepends)
iCmax1_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
iCmax1_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

iCmax1_debug_gmp_ref_SOURCES  = ../common/iCmax1.debug.cpp $(debug_srcdepends)
iCmax1_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
iCmax1_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

RCsum1_debug_gmp_SOURCES  = ../common/RCsum1.debug.cpp $(debug_srcdepends)
RCsum1_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
RCsum1_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

RCsum1_debug_gmp_ref_SOURCES  = ../common/RCsum1.debug.cpp $(debug_srcdepends)
RCsum1_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
RCsum1_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rpotrs_debug_gmp_SOURCES  = ../common/Rpotrs.debug.cpp $(debug_srcdepends)
Rpotrs_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rpotrs_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rpotrs_debug_gmp_ref_SOURCES  = ../common/Rpotrs.debug.cpp $(debug_srcdepends)
Rpotrs_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rpotrs_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rposv_debug_gmp_SOURCES  = ../common/Rposv.debug.cpp $(debug_srcdepends)
Rposv_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rposv_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rposv_debug_gmp_ref_SOURCES  = ../common/Rposv.debug.cpp $(debug_srcdepends)
Rposv_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rposv_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rlatrs_debug_gmp_SOURCES  = ../common/Rlatrs.debug.cpp $(debug_srcdepends)
Rlatrs_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlatrs_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlatrs_debug_gmp_ref_SOURCES  = ../common/Rlatrs.debug.cpp $(debug_srcdepends)
Rlatrs_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlatrs_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rlange_debug_gmp_SOURCES  = ../common/Rlange.debug.cpp $(debug_srcdepends)
Rlange_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlange_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlange_debug_gmp_ref_SOURCES  = ../common/Rlange.debug.cpp $(debug_srcdepends)
Rlange_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlange_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rgeequ_debug_gmp_SOURCES  = ../common/Rgeequ.debug.cpp $(debug_srcdepends)
Rgeequ_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgeequ_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rgeequ_debug_gmp_ref_SOURCES  = ../common/Rgeequ.debug.cpp $(debug_srcdepends)
Rgeequ_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgeequ_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

#Rlacn2_debug_gmp_SOURCES  = ../common/Rlacn2.debug.cpp $(debug_srcdepends)
#Rlacn2_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
#Rlacn2_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

#Rlacn2_debug_gmp_ref_SOURCES  = ../common/Rlacn2.debug.cpp $(debug_srcdepends)
#Rlacn2_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
#Rlacn2_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rgecon_debug_gmp_SOURCES  = ../common/Rgecon.debug.cpp $(debug_srcdepends)
Rgecon_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgecon_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rgecon_debug_gmp_ref_SOURCES  = ../common/Rgecon.debug.cpp $(debug_srcdepends)
Rgecon_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgecon_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rgecon_test_gmp_SOURCES  = ../common/Rgecon.test.cpp $(debug_srcdepends)
Rgecon_test_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rgecon_test_gmp_CXXFLAGS = $(debug_cxxflags)  

Rgecon_test_gmp_ref_SOURCES  = ../common/Rgecon.test.cpp $(debug_srcdepends)
Rgecon_test_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rgecon_test_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rlauu2_debug_gmp_SOURCES  = ../common/Rlauu2.debug.cpp $(debug_srcdepends)
Rlauu2_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlauu2_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlauu2_debug_gmp_ref_SOURCES  = ../common/Rlauu2.debug.cpp $(debug_srcdepends)
Rlauu2_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlauu2_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rlauum_debug_gmp_SOURCES  = ../common/Rlauum.debug.cpp $(debug_srcdepends)
Rlauum_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rlauum_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rlauum_debug_gmp_ref_SOURCES  = ../common/Rlauum.debug.cpp $(debug_srcdepends)
Rlauum_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rlauum_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rpotri_debug_gmp_SOURCES  = ../common/Rpotri.debug.cpp $(debug_srcdepends)
Rpotri_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rpotri_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rpotri_debug_gmp_ref_SOURCES  = ../common/Rpotri.debug.cpp $(debug_srcdepends)
Rpotri_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rpotri_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rpocon_debug_gmp_SOURCES  = ../common/Rpocon.debug.cpp $(debug_srcdepends)
Rpocon_debug_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rpocon_debug_gmp_CXXFLAGS = $(debug_cxxflags)  

Rpocon_debug_gmp_ref_SOURCES  = ../common/Rpocon.debug.cpp $(debug_srcdepends)
Rpocon_debug_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rpocon_debug_gmp_ref_CXXFLAGS = $(debug_cxxflags)

Rpocon_test_gmp_SOURCES  = ../common/Rpocon.test.cpp $(debug_srcdepends)
Rpocon_test_gmp_LDFLAGS    = $(opt_libdepends) $(debug_libdepends)
Rpocon_test_gmp_CXXFLAGS = $(debug_cxxflags)  

Rpocon_test_gmp_ref_SOURCES  = ../common/Rpocon.test.cpp $(debug_srcdepends)
Rpocon_test_gmp_ref_LDFLAGS    = $(ref_libdepends) $(debug_libdepends)
Rpocon_test_gmp_ref_CXXFLAGS = $(debug_cxxflags)
